--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,9 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <!--====== Title ======-->
-    <title> Hotel Miranda Contact us' </title>
+    <title> Contact Us || Sun Rise Eco Homes </title>
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="assets/img/favicon.ico" type="img/png" />
+    <link rel="shortcut icon" href="sunrise-img/logo.jpg" type="img/png" />
     <!--====== Animate Css ======-->
     <link rel="stylesheet" href="assets/css/animate.min.css">
     <!--====== Bootstrap css ======-->
@@ -48,7 +48,7 @@
         </div>
     </div>
     <!--====== HEADER START ======-->
-    <script src="header.js"></script>
+    <script src="header-2.js"></script>
     <!--====== HEADER PART END ======-->
 
 
@@ -110,14 +110,14 @@
     <!--====== OFF CANVAS END ======-->
 
     <!--====== BREADCRUMB PART START ======-->
-    <section class="breadcrumb-area" style="background-image: url(assets/img/bg/04.jpg);">
+    <section class="breadcrumb-area" style="background-image: url(sunrise-img/exterior/17.jpeg);">
         <div class="container">
             <div class="breadcrumb-text">
                 <span>The ultimate luxury</span>
                 <h2 class="page-title">Contact us</h2>
 
                 <ul class="breadcrumb-nav">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li class="active">Contact</li>
                 </ul>
             </div>
@@ -138,7 +138,7 @@
                             </div>
                             <div class="desc">
                                 <h4>Office Address</h4>
-                                <p>19/A, Cirikon City hall Tower New York, NYC</p>
+                                <p style="font-size: 14px;"> Daringbadi, Pole, Kandhamal, Pin:762104</p>
                             </div>
                         </div>
                     </div>
@@ -149,7 +149,7 @@
                             </div>
                             <div class="desc">
                                 <h4>Phone Number</h4>
-                                <p>+ 97656 8675 7864 7 <br> + 876 766 8675 765 6</p>
+                                <p style="font-size: 14px;">+91 8249724355</p>
                             </div>
                         </div>
                     </div>
@@ -160,46 +160,50 @@
                             </div>
                             <div class="desc">
                                 <h4>Email Address</h4>
-                                <p>info@webmail.com <br> jobs.webmail@mail.com</p>
+                                <p style="font-size: 14px;">sunriseecohome@gmail.com</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- Contact Mapts -->
-            <div class="contact-maps mb-30" id="contactMaps"></div>
+            <!-- <div class="contact-maps mb-30" id="contactMaps"></div> -->
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3751.396401887927!2d84.1366579!3d19.9076937!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a23195bbee4f067%3A0x4a63fb07d813e60d!2sSUNRISE%20ECO%20HOMES!5e0!3m2!1sen!2sin!4v1751629476141!5m2!1sen!2sin"
+                width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
             <!-- Contact Form -->
             <div class="contact-form">
-                <form action="#">
+                <form id="contactForm">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="input-group mb-30">
                                 <span class="icon"><i class="far fa-user"></i></span>
-                                <input type="text" placeholder="Your full name">
+                                <input type="text" placeholder="Your full name" id="formName">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="input-group mb-30">
                                 <span class="icon"><i class="far fa-envelope"></i></span>
-                                <input type="email" placeholder="Enter email address">
+                                <input type="email" placeholder="Enter email address" id="formEmail">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="input-group mb-30">
                                 <span class="icon"><i class="far fa-phone"></i></span>
-                                <input type="text" placeholder="Add phone number">
+                                <input type="text" placeholder="Add phone number" id="formNumber">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="input-group mb-30">
                                 <span class="icon"><i class="far fa-book"></i></span>
-                                <input type="text" placeholder="Select Subject">
+                                <input type="text" placeholder="Select Subject" id="formSubject">
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="input-group textarea mb-30">
                                 <span class="icon"><i class="far fa-pen"></i></span>
-                                <textarea type="text" placeholder="Enter messages"></textarea>
+                                <textarea type="text" placeholder="Enter messages" id="formMessage"></textarea>
                             </div>
                         </div>
                         <div class="col-12 text-center">
@@ -246,6 +250,70 @@
     <script src="assets/js/map.js"></script>
     <!--====== Main js ======-->
     <script src="assets/js/main.js"></script>
+
+  <!-- SweetAlert Script -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+    <script>
+        document.getElementById('contactForm').addEventListener('submit', function (event) {
+            event.preventDefault(); // Prevent default form submission
+
+            // Show SweetAlert loading
+            swal({
+                title: 'Submitting Form',
+                text: 'Please wait...',
+                buttons: false,
+                closeOnClickOutside: false,
+                closeOnEsc: false,
+                icon: 'info',
+                content: {
+                    element: "img",
+                    attributes: {
+                        src: "sunrise-img/loader.gif", // Make sure loader.gif exists
+                        className: "circular",
+                        style: "width:150px;height:100px;object-fit:cover;"
+
+                    }
+                }
+            });
+
+            const formData = {
+                name: document.getElementById('formName').value,
+                email: document.getElementById('formEmail').value,
+                phone: document.getElementById('formNumber').value,
+                subject: document.getElementById('formSubject').value,
+                msg: document.getElementById('formMessage').value
+            };
+
+            fetch('https://bookingjini-all-site-contact-form-backend.onrender.com/api/auth/sunrise', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(formData)
+            })
+                .then(response => response.json())
+                .then(data => {
+                    swal.close(); // Close the loading spinner
+                    swal({
+                        title: 'Success!',
+                        text: 'Form submitted successfully.',
+                        icon: 'success'
+                    });
+                    document.getElementById('contactForm').reset();
+                })
+                .catch(error => {
+                    swal.close(); // Close the loading spinner
+                    swal({
+                        title: 'Error!',
+                        text: 'An error occurred while submitting the form.',
+                        icon: 'error'
+                    });
+                    console.error('Form submission error:', error);
+                });
+        });
+    </script>
+
+
+
 </body>
 
 </html>
