Updaing the About us

--- a/index.html
+++ b/index.html
@@ -77,84 +77,7 @@
     </div>
 
     <!--====== HEADER START ======-->
-    <header class="header-absolute header-two sticky-header">
-        <div class="container container-custom-one">
-            <div class="nav-container d-flex align-items-center justify-content-between justify-content-lg-around">
-                <!-- Site Logo -->
-                <div class="site-logo">
-                    <a href="index.html" class="main-logo"><img src="sunrise-img/logo.jpg" alt="Logo"
-                            style="width: 110px;border-radius: 5px;"></a>
-                    <a href="index.html" class="sticky-logo"><img src="sunrise-img/logo.jpg" alt="Logo"
-                            style="width: 110px;"></a>
-                </div>
-
-
-                <!-- Main Menu -->
-                <div class="nav-menu d-lg-flex align-items-center">
-
-                    <!-- Navbar Close Icon -->
-                    <div class="navbar-close">
-                        <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
-                    </div>
-
-                    <!-- Off canvas Menu  -->
-                    <!-- <div class="toggle">
-                        <a href="#" id="offCanvasBtn"><i class="fal fa-bars"></i></a>
-                    </div> -->
-                    <!-- Mneu Items -->
-                    <div class="menu-items">
-                        <ul>
-                            <li>
-                                <a href="index.html">Home</a>
-
-                            </li>
-                            <li><a href="about.html">About Us</a></li>
-                            <li>
-                                <a href="index.html#rooms">Rooms</a>
-                                <ul class="submenu">
-                                    <li><a href="deluxe-room.html">Deluxe Room</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="gallery.html">Gallery</a></li>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                    </div>
-
-                    <!-- from pushed-item -->
-                    <div class="nav-pushed-item"></div>
-                </div>
-
-
-
-                <!-- Header Info Pussed To Menu Wrap -->
-                <div class="nav-push-item">
-                    <!-- Header Info -->
-                    <div class="header-info d-lg-flex align-items-center">
-                        <div class="item">
-                            <i class="fal fa-phone"></i>
-                            <span>Phone Number</span>
-                            <a href="tel:+91 8249724355">
-                                <h5 class="title">+91 8249724355</h5>
-                            </a>
-                        </div>
-                        <div class="item">
-                            <i class="fal fa-envelope"></i>
-                            <span>Email Address</span>
-                            <a href="mailto:sunriseecohome@gmail.com">
-                                <h5 class="title">sunriseecohome@gmail.com</h5>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Navbar Toggler -->
-                <div class="navbar-toggler">
-                    <span></span><span></span><span></span>
-                </div>
-            </div>
-        </div>
-    </header>
+    <script src="header.js"></script>
     <!--====== HEADER END ======-->
 
 
@@ -575,7 +498,8 @@
 
 
     <!-- Accommodation section -->
-    <section class="text-block with-bg pt-115 pb-115" style="background-image: url(sunrise-img/rooms/5.jpeg);" id="rooms">
+    <section class="text-block with-bg pt-115 pb-115" style="background-image: url(sunrise-img/rooms/5.jpeg);"
+        id="rooms">
         <div class="container">
             <div class="row align-items-center justify-content-center justify-content-lg-between">
                 <div class="col-lg-5 col-md-8 col-sm-10 wow fadeInLeft" data-wow-delay=".3s"
@@ -591,7 +515,7 @@
                             views, each room is your private retreat to relax, recharge, and reconnect with nature.
                         </p>
                         <a href="#" class="main-btn btn-filled mt-40">Book now</a>
-                        <a href="deluxe-rooms.html" class="main-btn btn-filled mt-40">View More</a>
+                        <a href="deluxe-room.html" class="main-btn btn-filled mt-40">View More</a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-10 wow fadeInRight" data-wow-delay=".5s"
@@ -608,7 +532,7 @@
 
 
     <!--====== CORE FEATURES START ======-->
-    <section class="core-feature-section bg-white pt-115 pb-115">
+    <section class="core-feature-section bg-white pt-115 pb-115" id="facilities">
         <div class="container">
             <div class="section-title text-center mb-50">
                 <span class="title-tag">Our Offerings</span>
