--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <section class="booking-form">
         <div class="container">
             <div class="booking-form-inner">
-                <form action="#">
+                <form id="bookingForm" action="#">
                     <div class="row align-items-end">
                         <div class="col-lg-3 col-md-6">
                             <div class="inputs-filed mt-30">
@@ -215,7 +215,7 @@
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <div class="inputs-filed mt-30">
-                                <button type="submit">check availability</button>
+                                <button type="button" onclick="sendWhatsAppMessage()">check availability</button>
                             </div>
                         </div>
                     </div>
@@ -514,7 +514,8 @@
                             comfort and nature. Thoughtfully designed with cozy interiors, modern amenities, and scenic
                             views, each room is your private retreat to relax, recharge, and reconnect with nature.
                         </p>
-                        <a href="#" class="main-btn btn-filled mt-40">Book now</a>
+                        <a href="https://wa.me/918249724355?text=Hello! I'd like to check availability. Check-in: Check-out: Guests: Room Type: Deluxe Room"
+                            class=" main-btn btn-filled mt-40">Book now</a>
                         <a href="deluxe-room.html" class="main-btn btn-filled mt-40">View More</a>
                     </div>
                 </div>
@@ -816,6 +817,28 @@
     </a>
     <!--====== FOOTER START ======-->
     <script src="footer.js"></script>
+    <script>
+
+        function sendWhatsAppMessage() {
+            const arrivalDate = document.getElementById('arrival-date').value;
+            const departureDate = document.getElementById('departure-date').value;
+            const guests = document.getElementById('guests').value;
+
+            if (!arrivalDate || !departureDate || !guests) {
+                alert("Please fill in all fields before proceeding.");
+                return;
+            }
+
+            const phoneNumber = "918249724355";
+            const message = `Hello! I'd like to check availability.\n\nCheck-in: ${arrivalDate}\nCheck-out: ${departureDate}\nGuests: ${guests}\nRoom Type:-`;
+            const encodedMessage = encodeURIComponent(message);
+            const url = `https://wa.me/${phoneNumber}?text=${encodedMessage}`;
+
+            window.open(url, '_blank');
+        }
+
+
+    </script>
     <!--====== FOOTER END ======-->
 
     <!--====== jquery js ======-->
