--- a/about-us.html
+++ b/about-us.html
@@ -151,7 +151,7 @@ html, body {
                             modern aesthetics. Embrace a lifestyle that’s not only environmentally friendly but also
                             uniquely serene and secure.
                         </p>
-                        <a href="#" class="main-btn btn-filled mt-40">Book now</a>
+                        <a href="booking.html" class="main-btn btn-filled mt-40">Book now</a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-10 wow fadeInRight" data-wow-delay=".5s"
