--- a/deluxe-room.html
+++ b/deluxe-room.html
@@ -244,7 +244,7 @@
                 <div class="col-lg-4">
                     <div class="room-booking-form">
                         <h5 class="title">Check Availability</h5>
-                        <form id="availabilityForm" action="#">
+                        <form id="availabilityForm" action="booking.html">
                             <div class="input-group input-group-two left-icon mb-20">
                                 <label for="arrival-date">Check In</label>
                                 <div class="icon"><i class="fal fa-calendar-alt"></i></div>
